[project]
name = "sidekick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio==5.49.1",
    "langchain==0.3.27",
    "langchain-community==0.3.31",
    "langchain-core==0.3.79",
    "langchain-experimental==0.3.4",
    "langchain-openai==0.3.35",
    "langgraph==0.6.10",
    "playwright==1.55.0",
    "pydantic==2.11.10",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "wikipedia==1.4.0",
]